--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -42,6 +42,7 @@
       <dependency id="Vanara.PInvoke.FunDisc" version="3.4.6" />
       <dependency id="Vanara.PInvoke.Gdi32" version="3.4.6" />
       <dependency id="Vanara.PInvoke.Graphics" version="3.4.6" />
+      <dependency id="Vanara.PInvoke.HttpApi" version="3.4.6" />
       <dependency id="Vanara.PInvoke.IMAPI" version="3.4.6" />
       <dependency id="Vanara.PInvoke.Imm32" version="3.4.6" />
       <dependency id="Vanara.PInvoke.IpHlpApi" version="3.4.6" />
