Fixed problems with CLFS_MGMT_POLICY

--- a/PInvoke/ClfsW32/Vanara.PInvoke.ClfsW32.csproj
+++ b/PInvoke/ClfsW32/Vanara.PInvoke.ClfsW32.csproj
@@ -19,6 +19,7 @@ AUTOGROW AUTOSHRINK CLFS_MGMT_NOTIFICATION CLFS_NODE_ID CLS_ARCHIVE_DESCRIPTOR C
 
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
