Made all unit tests unsafe, net48 and signed

--- a/UnitTests/Directory.Build.props
+++ b/UnitTests/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
+    <TargetFrameworks/>
     <TargetFramework>net48</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Product>Vanara</Product>
