--- a/UnitTests/Directory.Build.targets
+++ b/UnitTests/Directory.Build.targets
@@ -3,6 +3,9 @@
     <DocumentationFile/>
     <IsPackable>false</IsPackable>
     <OutputPath>bin\$(Configuration)\</OutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)..\Vanara.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="**\~*.cs" />
