Updated project files

--- a/PInvoke/NdfApi/Vanara.PInvoke.NdfApi.csproj
+++ b/PInvoke/NdfApi/Vanara.PInvoke.NdfApi.csproj
@@ -12,7 +12,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-NdfCancelIncident NdfCloseIncident NdfCreateConnectivityIncident NdfCreateDNSIncident NdfCreateGroupingIncident NdfCreateInboundIncident NdfCreateIncident NdfCreateNetConnectionIncident NdfCreatePnrpIncident NdfCreateSharingIncident NdfCreateWebIncident NdfCreateWebIncidentEx NdfCreateWinSockIncident NdfDiagnoseIncident NdfExecuteDiagnosis NdfGetTraceFile NdfRepairIncident NdfRepairIncidentEx NdfRunDllDiagnoseIncident NdfRunDllDiagnoseNetConnectionIncident NdfRunDllDiagnoseWithAnswerFile NdfRunDllDuplicateIPDefendingSystem NdfRunDllDuplicateIPOffendingSystem NdfRunDllHelpTopic
+NdfCancelIncident NdfCloseIncident NdfCreateConnectivityIncident NdfCreateDNSIncident NdfCreateGroupingIncident NdfCreateInboundIncident NdfCreateIncident NdfCreateNetConnectionIncident NdfCreatePnrpIncident NdfCreateSharingIncident NdfCreateWebIncident NdfCreateWebIncidentEx NdfCreateWinSockIncident NdfDiagnoseIncident NdfExecuteDiagnosis NdfGetTraceFile NdfRepairIncident
 
 Structures
 DiagnosticsInfo DIAG_SOCKADDR HelperAttributeInfo HELPER_ATTRIBUTE HYPOTHESIS HypothesisResult LIFE_TIME NDFHANDLE OCTET_STRING RepairInfo RepairInfoEx RootCauseInfo ShellCommandInfo UiInfo
