--- a/System/Vanara.SystemServices.csproj
+++ b/System/Vanara.SystemServices.csproj
@@ -39,6 +39,7 @@ BatteryStatus, EnergySaverStatus, JobLimit, NetworkInterfaceAccessType, NetworkI
     <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
     <ProjectReference Include="..\PInvoke\WinInet\Vanara.PInvoke.WinINet.csproj" />
     <ProjectReference Include="..\PInvoke\WlanApi\Vanara.PInvoke.WlanApi.csproj" />
+    <ProjectReference Include="..\PInvoke\WTSApi32\Vanara.PInvoke.WTSApi32.csproj" />
     <ProjectReference Include="..\Security\Vanara.Security.csproj" />
   </ItemGroup>
 </Project>
