--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -19,6 +19,7 @@
       <dependency id="Vanara.BITS" version="3.4.8" />
       <dependency id="Vanara.Core" version="3.4.8" />
       <dependency id="Vanara.Management" version="3.4.8" />
+      <dependency id="Vanara.Net" version="3.4.8" />
       <dependency id="Vanara.PInvoke.Accessibility" version="3.4.8" />
       <dependency id="Vanara.PInvoke.AclUI" version="3.4.8" />
       <dependency id="Vanara.PInvoke.AMSI" version="3.4.8" />
