--- a/Net/Vanara.Net.csproj
+++ b/Net/Vanara.Net.csproj
@@ -14,10 +14,12 @@ DhcpClient, DnsService
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
     <RootNamespace>Vanara.Net</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\PInvoke\Dhcp\Vanara.PInvoke.Dhcp.csproj" />
     <ProjectReference Include="..\PInvoke\DnsApi\Vanara.PInvoke.DnsApi.csproj" />
+    <ProjectReference Include="..\PInvoke\Drt\Vanara.PInvoke.Drt.csproj" />
     <ProjectReference Include="..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
   </ItemGroup>
 </Project>
