--- a/Net/Vanara.Net.csproj
+++ b/Net/Vanara.Net.csproj
@@ -9,7 +9,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Classes
-DhcpClient, DnsService
+CustomDnsBootstapper, DhcpClient, DistributedRoutingTable, DnsService, DrtBootstrapProvider, DrtCustomBootstrapProvider, DrtCustomSecurityProvider, DrtSecurityProvider
 
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
