--- a/Management/Vanara.Management.csproj
+++ b/Management/Vanara.Management.csproj
@@ -14,13 +14,13 @@ DynamicMgmtObject, ManagementExtensions
 </PackageReleaseNotes>
     <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
-  <ItemGroup>
-    <!--<ProjectReference Include="..\..\Core\Vanara.Core.csproj" />-->
-  </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
+    <PackageReference Include="System.Management" Version="7.0.0" />
+  </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Management" Version="5.0.0" />
+    <Reference Include="System.Management" />
   </ItemGroup>
 </Project>
