--- a/Windows.Extensions/Vanara.Windows.Extensions.csproj
+++ b/Windows.Extensions/Vanara.Windows.Extensions.csproj
@@ -25,6 +25,7 @@ Corners
     <ProjectReference Include="..\PInvoke\User32\Vanara.PInvoke.User32.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="5.0.3" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) " />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) " />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) " />
   </ItemGroup>
 </Project>
