--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Version>3.4.12</Version>
     <TargetFrameworks>net45;net48;net5.0;net6.0;netstandard2.0;netcoreapp3.1</TargetFrameworks>
-    <!--<Platforms>AnyCPU;x64;x86</Platforms>-->
+    <Platforms>AnyCPU;x64;x86</Platforms>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)Vanara.snk</AssemblyOriginatorKeyFile>
     <Authors>David Hall</Authors>
     <Company>GitHub Community</Company>
