Got the VssApi projects to build

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,9 @@
   <PropertyGroup>
     <Version>3.4.12</Version>
     <TargetFrameworks>net45;net48;net6.0;netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU;x64;x86</Platforms>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)Vanara.snk</AssemblyOriginatorKeyFile>
     <Authors>David Hall</Authors>
     <Company>GitHub Community</Company>
