--- a/UnitTests/PInvoke/VssApi/VssApi.csproj
+++ b/UnitTests/PInvoke/VssApi/VssApi.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>UnitTest.PInvoke.VssApi</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
