Added `UseX64` tag to projects where x64/x86 makes a difference to structures.

--- a/PInvoke/IpHlpApi/Vanara.PInvoke.IpHlpApi.csproj
+++ b/PInvoke/IpHlpApi/Vanara.PInvoke.IpHlpApi.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ProjectExtensions>
     <SupportedDlls>iphlpapi.dll</SupportedDlls>
+    <UseX64>true</UseX64>
   </ProjectExtensions>
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows IpHlpApi.dll.</Description>
