--- a/Windows.Shell.Common/Vanara.Windows.Shell.Common.csproj
+++ b/Windows.Shell.Common/Vanara.Windows.Shell.Common.csproj
@@ -23,9 +23,11 @@ ChangeFilters, DialogStatus, ExecutableType, FileUsageType, FolderItemFilter, Li
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('netstandard')) " />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) " />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) " />
     <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('net5')) Or $(TargetFramework.StartsWith('net6')) Or $(TargetFramework.StartsWith('net7')) " />
-    <PackageReference Include="System.Security.Permissions" Version="7.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) Or $(TargetFramework.StartsWith('net6')) Or $(TargetFramework.StartsWith('net7')) " />
+    <PackageReference Include="System.Security.Permissions" Version="6.0.0" Condition=" $(TargetFramework.StartsWith('netcore')) " />
+    <PackageReference Include="System.Security.Permissions" Version="7.0.0" Condition=" $(TargetFramework.StartsWith('net5')) Or $(TargetFramework.StartsWith('net6')) Or $(TargetFramework.StartsWith('net7')) " />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
