--- a/Management/Vanara.Management.csproj
+++ b/Management/Vanara.Management.csproj
@@ -18,9 +18,10 @@ DynamicMgmtObject, ManagementExtensions
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
-    <PackageReference Include="System.Management" Version="7.0.0" />
+    <PackageReference Include="System.Management" Version="6.0.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
+    <PackageReference Include="System.Management" Version="7.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' " />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System.Management" />
   </ItemGroup>
 </Project>
