--- a/VirtualDisk/Vanara.VirtualDisk.csproj
+++ b/VirtualDisk/Vanara.VirtualDisk.csproj
@@ -19,8 +19,13 @@ CompactionMode, DeviceType, Subtype
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) " />
-    <PackageReference Include="System.Management" Version="5.0.0" Condition=" '$(TargetFramework)' == 'net45' " />
-    <PackageReference Include="System.Management" Version="7.0.0" Condition=" '$(TargetFramework)' != 'net45' " />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
+    <PackageReference Include="System.Management" Version="6.0.0" Condition=" '$(TargetFramework)' == 'netcoreapp3.1' " />
+    <PackageReference Include="System.Management" Version="7.0.0" Condition=" '$(TargetFramework)' != 'netcoreapp3.1' " />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <Reference Include="System.Management" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Management\Vanara.Management.csproj" />
