--- a/UnitTests/PInvoke/VssApi/VssApi.csproj
+++ b/UnitTests/PInvoke/VssApi/VssApi.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <AssemblyName>UnitTest.PInvoke.VssApi</AssemblyName>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\..\..\PInvoke\VssApiMgd\Vanara.PInvoke.VssApiMgd.csproj" />
+    <ProjectReference Include="..\..\..\PInvoke\VssApi\VssApi.vcxproj" />
   </ItemGroup>
 </Project>
