--- a/PInvoke/VssApi/VssApi.nuspec
+++ b/PInvoke/VssApi/VssApi.nuspec
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package >
-	<metadata>
-		<id>Vanara.PInvoke.VssApi</id>
-		<title>Vanara.PInvoke.VssApi</title>
-		<version>3.4.12</version>
-		<description>PInvoke API (methods, structures and constants) imported from Windows Volume Shadow Copy Service (VssApi.dll).</description>
-		<tags>pinvoke,vanara,net-extensions,interop,VSS,VssApi,volume shadow copy service</tags>
-		<copyright>Copyright © 2017-2022</copyright>
-		<authors>David Hall</authors>
-		<owners>David Hall</owners>
-		<license type="expression">MIT</license>
-		<projectUrl>https://github.com/dahall/vanara</projectUrl>
-		<icon>Vanara48x48.png</icon>
-		<readme>pkgreadme.md</readme>
-		<repository type="git" url="https://github.com/dahall/Vanara.git" />
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<language>en-US</language>
-		<dependencies>
-			<group targetFramework="net6.0">
-				<dependency id="Vanara.Core" version="3.4.12" exclude="Build,Analyzers" />
-				<dependency id="Vanara.PInvoke.Shared" version="3.4.12" exclude="Build,Analyzers" />
-			</group>
-		</dependencies>
-	</metadata>
-	<files>
-		<file src="bin\Release\net6.0\Vanara.PInvoke.VssApi.dll" target="lib\net6.0" />
-		<file src="bin\Release\net6.0\Vanara.PInvoke.VssApi.xml" target="lib\net6.0" />
-		<file src="bin\Release\net6.0\Vanara.PInvoke.VssApi.pdb" target="lib\net6.0" />
-		<file src="bin\Release\net6.0\Vanara.PInvoke.VssApiMgd.dll" target="lib\net6.0" />
-		<file src="..\VssApiMgd\bin\Release\net6.0\Vanara.PInvoke.VssApiMgd.xml" target="lib\net6.0" />
-		<file src="..\VssApiMgd\bin\Release\net6.0\Vanara.PInvoke.VssApiMgd.pdb" target="lib\net6.0" />
-		<file src="..\..\docs\icons\Vanara48x48.png" target="" />
-		<file src="..\VssApiMgd\pkgreadme.md" target="" />
-	</files>
+  <metadata>
+    <id>$id$</id>
+    <version>$version$</version>
+    <title>$title$</title>
+    <description>$description$</description>
+    <copyright>$copyright$</copyright>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
+    <tags>pinvoke,vanara,net-extensions,interop,VSS,VssApi,volume shadow copy service</tags>
+    <license type="expression">MIT</license>
+    <projectUrl>https://github.com/dahall/vanara</projectUrl>
+    <icon>Vanara48x48.png</icon>
+    <readme>pkgreadme.md</readme>
+    <repository type="git" url="https://github.com/dahall/Vanara.git" />
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <language>en-US</language>
+    <dependencies>
+      <group targetFramework="net6.0">
+        <dependency id="Vanara.Core" version="$version$" exclude="Build,Analyzers" />
+        <dependency id="Vanara.PInvoke.Shared" version="$version$" exclude="Build,Analyzers" />
+      </group>
+    </dependencies>
+  </metadata>
+  <files>
+    <file src="bin\Release\net6.0\Vanara.PInvoke.VssApi.dll" target="lib\net6.0" />
+    <file src="bin\Release\net6.0\Vanara.PInvoke.VssApi.xml" target="lib\net6.0" />
+    <file src="bin\Release\net6.0\Vanara.PInvoke.VssApi.pdb" target="lib\net6.0" />
+    <file src="bin\Release\net6.0\Vanara.PInvoke.VssApiMgd.dll" target="lib\net6.0" />
+    <file src="..\VssApiMgd\bin\Release\net6.0\Vanara.PInvoke.VssApiMgd.xml" target="lib\net6.0" />
+    <file src="..\VssApiMgd\bin\Release\net6.0\Vanara.PInvoke.VssApiMgd.pdb" target="lib\net6.0" />
+    <file src="..\..\docs\icons\Vanara48x48.png" target="" />
+    <file src="..\VssApiMgd\pkgreadme.md" target="" />
+  </files>
 </package>
