--- a/PInvoke/PhotoAcquire/Vanara.PInvoke.PhotoAcquire.csproj
+++ b/PInvoke/PhotoAcquire/Vanara.PInvoke.PhotoAcquire.csproj
@@ -6,7 +6,16 @@
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;photoacq;photo acquisition;windows</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Classes
+PhotoAcquire, PhotoAcquireDeviceSelectionDialog, PhotoAcquireOptionsDialog, PhotoAcquisition, PhotoProgressDialog
+
+Enumerations
+DEVICE_SELECTION_DEVICE_TYPE, DSF, ERROR_ADVISE_MESSAGE_TYPE, ERROR_ADVISE_RESULT, PAPS, PHOTOACQ, PROGRESS_DIALOG_CHECKBOX_ID, PROGRESS_DIALOG_IMAGE_TYPE, USER_INPUT_STRING_TYPE
+
+</PackageReleaseNotes>
+    <PackageReadmeFile>pkgreadme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
