--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -33,6 +33,7 @@
       <dependency id="Vanara.PInvoke.ComDlg32" version="3.4.12" />
       <dependency id="Vanara.PInvoke.CredUI" version="3.4.12" />
       <dependency id="Vanara.PInvoke.Cryptography" version="3.4.12" />
+      <dependency id="Vanara.PInvoke.DavClnt" version="3.4.12" />
       <dependency id="Vanara.PInvoke.DbgHelp" version="3.4.12" />
       <dependency id="Vanara.PInvoke.Dhcp" version="3.4.12" />
       <dependency id="Vanara.PInvoke.DnsApi" version="3.4.12" />
