Updated version to 3.4.13

--- a/PInvoke/VssApi/VssApi.vcxproj
+++ b/PInvoke/VssApi/VssApi.vcxproj
@@ -102,6 +102,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>vssapi.lib</AdditionalDependencies>
+      <Version>3.4.13</Version>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -115,6 +116,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>vssapi.lib</AdditionalDependencies>
+      <Version>3.4.13</Version>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -128,6 +130,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>vssapi.lib</AdditionalDependencies>
+      <Version>3.4.13</Version>
     </Link>
     <!--<CustomBuildStep>
       <Command>C:\Temp\Nuget.exe pack $(MSBuildThisFileDirectory)VssApi.nuspec -Symbols -SymbolPackageFormat snupkg -OutputDirectory bin\$(Configuration)</Command>
@@ -147,6 +150,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>vssapi.lib</AdditionalDependencies>
+      <Version>3.4.13</Version>
     </Link>
     <!--<CustomBuildStep>
       <Command>C:\Temp\Nuget.exe pack $(MSBuildThisFileDirectory)VssApi.nuspec -Symbols -SymbolPackageFormat snupkg -OutputDirectory bin\$(Configuration)</Command>
